[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pspairingbridge"
version = "0.0.1"
description = "A bridge for PS Remote Play discovery packets over VPNs"
readme = "README.md"
authors = [
  { name = "Smekl", email = "ido098@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "scapy",
]

[project.scripts]
pspairingbridge = "pspairingbridge.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Smekl/pspairingbridge"
